# dashboard

./: .env  .fustfmt.toml  .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0790a7457ba51fa339e1c4de4d996c4b17ca1a9ae00684f436eba1ab70b25d99.json  query-09aea9d65375badb6cd783a0970f830ae71c1b1210956cab38b0061f4ea94dbf.json  query-0d9a383543495132f6d4de28504da1f0de3ccbae01bbaa98586c6b1d80ee5a15.json  query-0fc09bac29ef1b98434c90ec1aa5c4cbab7e4da1bb7e00cf4acbe316f8d23978.json  query-13e6286e1f2d70532db2af7413194a692246b94a541f7bbbaa76d874f3cb5199.json  query-17e66cc635f935363af32ca21351530369d9088658af66a919e7f00fe6b31b59.json  query-181fbb4fe8a933a5d7a8e012483b341fd7b4d358961718a9a985c42e68e6285f.json  query-202f2e84f12d80f3b6799ad9259656261ef09eadc76aac0797dccb8b6f571284.json  query-205a99694b74f998949f8b3a47e622d4cf1a3c3da8784c3e0f4c294864dba4bc.json  query-207af5329d567fcb6a277d43466171b57d691cc5b460f90f797e35352cc53e95.json  query-2b3af4899944db66c0b379979dc8e561a1d1d4797d4940c968c842e85b6ab0cf.json  query-2c2b5227f6f28a537d37bc43717dc8ac511bb2ab662b152965eb46ff917daa14.json  query-2dc5a8c23fb9916896f559f27d6ec37bee1e39ab4254e5e36a2e105cb69e9ead.json  query-2f61a942b22abd15953d6b9dce016887a21617f0000bcb54f664817434111c02.json  query-2fefa541d5ee4582f1b9723b2574814050cafce02e86ffdf8aec956eb8c0bc48.json  query-385953a54aa2d72766f45740f5af9dd708b6fb05e6501947b666f894fac51997.json  query-48183ba274aa14883fe17393a460cd7c90d22f8aa456d3430d8eb0e9c8564bee.json  query-4937f2294a6299593107ed50149b25a8ffe62b6e71ec7e415711835dfccb0b0b.json  query-4bd4ea1571edcf74e7bd46eb59de82ff0318b3aa1297c6257a7a700af274c18e.json  query-4d5bf0471c74865397af815115247b3a8737acaf4c49439eb7bb117a673bbb09.json  query-4ffa36dd6e99e0ad97c55bb0e14db06c5e6b1644b1b011a9bc28ca3bb73682bb.json  query-537a63edd96f2cfc53fc663fe94eb07a671c3d0666137d41740da12c8ed43c5b.json  query-59b5569b8008e6c0c6a8c7cfb9a29ede1be02883cec1f73f4112bf35d8384ced.json  query-5a27712861b1aa960c9657d7915912ae695aed27243876cea66f804a3b7cc980.json  query-5a99fffa8e50b629b31489a801ece7e368471223572e7084b4d8052c04511194.json  query-60730cbede975e05b5c48b858f75baa0017bc474d1bc70b183761cac788f068d.json  query-6131d63ac7c385f39c4b9a6cc8a013a984795eea9c2c8f3d78d7b19d2686ac63.json  query-627c9aefc200bf6af3f67c94e686ca4ab5f1195ff27ed92d7fdde17a26b9fd73.json  query-62e6d7c69b6434daa2f7f898c5d00face9a5e80cb02a3bc0812fdbf0cbce2ea6.json  query-6884f8c9d38ca2cea1b76740dd587e10e5c013afb12f1921539f38bde408c419.json  query-6b8f718b17d619fb090f05b64e723796ce45af13cb7809e6f337dcea2d627788.json  query-6c6ec34eddcd2214241d831ffad03944f1ca27275a2c3505e9f239d54ce1cbec.json  query-75655a593880d5dc0b13fbbc3b71aa51b9968630a258e41912858720a18efde9.json  query-75b017b48c480e9b3542d510a726aef390ec41e7d2a97f7d89ac130921def67a.json  query-75e40901636206784020d9410aaf7c21a0f1d1315d9f2d08be14f6b2b4448700.json  query-77da8a072ff13a51bc339b3c8b613915d9dddf9f30ad7dfd2475f4045188b2b4.json  query-7e4d365b6126e25785db08a14f6f0bbcc10113d88d7ad8e42dce089aa38d8fa4.json  query-805fb2c8f054f7d2683ef33d2afb0a27a017dee72522767c36c757599575e912.json  query-8223e3cacc06ef795bdf7fcfb3979fafe3e48fd8cab5e7841e87772d4ad7c066.json  query-8a74bc77c73c285d296cdbb419755758ddbaff50b8bd4e135a7a38053a9905e2.json  (+27 more)
common/: Cargo.toml
common/src/: error.rs
configuration/: base.yaml  local.yaml
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  telemetry.rs
crates/migrate/: Cargo.toml
crates/migrate/benches/: benchmarks.rs  memory.rs
crates/migrate/src/: cli.rs  main.rs
crates/migrate/src/etl/: loaders.rs  migration.rs  types.rs
crates/migrate/src/etl/sql/: get_config_options.sql  get_custom_fields.sql  get_products.sql  get_servers.sql  get_templates.sql
crates/migrate/tests/: idempotency.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  config.rs  main.rs  state.rs
crates/server/src/model/: queries.rs  types.rs
crates/server/src/proxmox/: client.rs  mod.rs  types.rs
crates/server/src/services/: action.rs  deletion.rs  mod.rs  setup.rs
crates/server/src/web/: auth.rs  middleware.rs  mod.rs  routes_login.rs  types.rs
crates/server/src/web/routes/: catalog.rs  login.rs  mod.rs  server.rs
crates/server/tests/api/: auth_api.rs  main.rs  server_api.rs  user_api.rs
crates/server/tests/api/helpers/: database.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: AuthButtons.jsx  CreateServerModal.jsx  ProtectedRoute.jsx  SelectInput.jsx  ServerTableRow.jsx  UserInfoModal.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useInterval.js
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  (+1 more)
migrate/: Cargo.toml
migrate/benches/: benchmarks.rs
migrate/src/: lib.rs  main.rs  migration.rs
migrate/src/etl/: loaders.rs  migration.rs  mod.rs  types.rs
migrate/src/etl/sql/: get_active_clients.sql  get_config_values.sql  get_ip_addresses.sql  get_services.sql  get_templates.sql
migrations/: 20250930092434_initial.sql  20251003051355_initial.sql  20251004053814_add_base_entities.sql  20251004054520_add_products.sql  20251004055120_add_services.sql  20251004060432_add_values.sql  20251004062631_add_indexes.sql  20251019064704_add_whmcs_ids.sql
scripts/: benchmark_api.sh  profile_memory.sh
server/: Cargo.toml
server/migrations/: 20251003051355_initial.sql
server/src/: app.rs  config.rs  lib.rs  main.rs
src/: app.rs  cli.rs  config.rs  database.rs  error.rs  lib.rs  proxmox.rs  routes.rs  services.rs  state.rs  telemetry.rs
src/model/: controller.rs  migration.rs  mod.rs  queries.rs  types.rs  whmcs.rs
src/proxmox/: client.rs  mod.rs  types.rs
src/services/: action.rs  deletion.rs  mod.rs  server_deletion.rs  server_setup.rs  setup.rs
src/web/: auth.rs  middleware.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_server.rs  types.rs
testbeds/proxmox/: readme.md
testbeds/whmcs/: docker-compose.yml  readme.md  whmcs_mysql_dump.sql
tests/api/: auth_api.rs  helpers.rs  main.rs  server_api.rs  user_api.rs
(+28 files in other folders)
