[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "./src/bin/server.rs"

[[bin]]
name = "migrate"
path = "./src/bin/migrate.rs"

[dependencies]
rust-argon2 = "3.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
envy = "0.4"
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
derive_more = { version = "2.0", features = ["display"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"json",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio-rustls",
	"time",
]

[dependencies.time]
version = "0.3"
features = [
	"serde",
	"serde-human-readable",
	"macros",
	"formatting",
	"parsing"
]
