[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "./src/bin/server.rs"

[[bin]]
name = "migrate"
path = "./src/bin/migrate.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
derive_more = { version = "2.0", features = ["display"] }
dotenv = "0.15"
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
percent-encoding = "2.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rust-argon2 = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
wiremock = "0.6"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"json",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio-rustls",
	"chrono",
	"uuid",
]
