[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
config = "0.15"
derive_more = { version = "2.0", features = ["display"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
rust-argon2 = "3.0"
thiserror = "2.0"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"json",
	"macros",
	"migrate",
	"postgres",
	"mysql",
	"runtime-tokio-rustls",
	"chrono",
	"uuid",
]
