[package]
name = "dashboard_server"
version = "0.2.0"
edition = "2024"

[dependencies]
dashboard_common = { path = "../common" }

async-trait = "0.1"
axum = "0.8"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
derive_more = { version = "2.0", features = ["display"] }
dotenv = "0.15"
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
percent-encoding = "2.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust-argon2 = "3.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
wiremock = "0.6"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"json",
	"macros",
	"migrate",
	"postgres",
	"mysql",
	"runtime-tokio-rustls",
	"chrono",
	"uuid",
]
